fix,overflow problem,alhamdulillah

--- a/src/component/showTask.css
+++ b/src/component/showTask.css
@@ -1,4 +1,4 @@
 .showtask{
   width: 100%;
-  overflow: hidden;
+  overflow-y: auto;
 }
